// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComparisonTreeNode ComparisonDetailDrawer should render the drawer when open is true 1`] = `
<body>
  <div />
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 920px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  查看对比详情
                </div>
              </div>
              <div
                class="ant-drawer-extra"
              />
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="css-17ndm04"
                  >
                    <h4
                      class="ant-typography css-dev-only-do-not-override-txh9fw"
                    >
                      建表语句差异
                    </h4>
                    <div
                      class="css-2xzyis"
                    >
                      <div
                        class="subtitle-item-wrapper"
                      >
                        <svg
                          color="#4583ff"
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                            fill="currentColor"
                          />
                        </svg>
                        <span
                          class="ant-typography subtitle-item-text css-dev-only-do-not-override-txh9fw"
                        >
                          baseline-name.test3
                        </span>
                      </div>
                      <div
                        class="subtitle-item-wrapper"
                      >
                        <svg
                          color="#4583ff"
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                            fill="currentColor"
                          />
                        </svg>
                        <span
                          class="ant-typography subtitle-item-text css-dev-only-do-not-override-txh9fw"
                        >
                          comparison-name.test3
                        </span>
                      </div>
                    </div>
                    <input
                      class="actiontech-diff-sql-view-only-editor-renderer-wrapper custom-diff-monaco-editor css-ndw5g2"
                      height="400"
                      language="sql"
                      options="{"readOnly":true,"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false}"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-footer"
            />
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`ComparisonTreeNode ComparisonDetailDrawer should render the drawer when open is true 2`] = `
<body>
  <div />
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 920px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  查看对比详情
                </div>
              </div>
              <div
                class="ant-drawer-extra"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                  type="button"
                >
                  <span>
                    生成变更SQL
                  </span>
                </button>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="css-17ndm04"
                  >
                    <h4
                      class="ant-typography css-dev-only-do-not-override-txh9fw"
                    >
                      建表语句差异
                    </h4>
                    <div
                      class="css-2xzyis"
                    >
                      <div
                        class="subtitle-item-wrapper"
                      >
                        <svg
                          color="#4583ff"
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                            fill="currentColor"
                          />
                        </svg>
                        <span
                          class="ant-typography subtitle-item-text css-dev-only-do-not-override-txh9fw"
                        >
                          baseline-name.test3
                        </span>
                      </div>
                      <div
                        class="subtitle-item-wrapper"
                      >
                        <svg
                          color="#4583ff"
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                            fill="currentColor"
                          />
                        </svg>
                        <span
                          class="ant-typography subtitle-item-text css-dev-only-do-not-override-txh9fw"
                        >
                          comparison-name.test3
                        </span>
                      </div>
                    </div>
                    <input
                      class="actiontech-diff-sql-view-only-editor-renderer-wrapper custom-diff-monaco-editor css-ndw5g2"
                      height="400"
                      language="sql"
                      options="{"readOnly":true,"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false}"
                      value=""
                    />
                  </div>
                  <div
                    class="ant-collapse ant-collapse-icon-position-start css-1ohn871 css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-collapse-item"
                    >
                      <div
                        aria-disabled="false"
                        aria-expanded="false"
                        class="ant-collapse-header"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="ant-collapse-expand-icon"
                        >
                          <span
                            aria-label="right"
                            class="anticon anticon-right ant-collapse-arrow"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="right"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                              />
                            </svg>
                          </span>
                        </div>
                        <span
                          class="ant-collapse-header-text"
                        >
                          基准环境建表语句审核结果
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-footer"
            />
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`ComparisonTreeNode ComparisonTreeNode should render the baseline and comparison trees 1`] = `
<div>
  <div
    class="css-ov1ktg"
  >
    <div
      class="ant-card ant-card-bordered css-ri1dts css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-card-body"
      >
        <div
          class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-dev-only-do-not-override-txh9fw"
          role="tree"
        >
          <div>
            <input
              aria-label="for screen reader"
              style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
              tabindex="0"
              value=""
            />
          </div>
          <div
            aria-hidden="true"
            class="ant-tree-treenode"
            style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
          >
            <div
              class="ant-tree-indent"
            >
              <div
                class="ant-tree-indent-unit"
              />
            </div>
          </div>
          <div
            class="ant-tree-list"
            style="position: relative;"
          >
            <div
              class="ant-tree-list-holder"
            >
              <div>
                <div
                  class="ant-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher_open"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        color="currentColor"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            color="#4583ff"
                            height="16"
                            viewBox="0 0 18 18"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                              fill="currentColor"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            baseline-name
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher_open"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        color="currentColor"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            color="#4583ff"
                            height="16"
                            viewBox="0 0 18 18"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8.25 5.25V3A.75.75 0 0 1 9 2.25h6.75a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V6a.75.75 0 0 1 .75-.75zM3.75 12v1.5H7.5V12zm6.75 0v1.5h3.75V12zm0-2.25v1.5h3.75v-1.5zm0-2.25V9h3.75V7.5zM3.75 9.75v1.5H7.5v-1.5z"
                              fill="currentColor"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            test
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher_open"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        color="currentColor"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3zM815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3m0 0"
                              fill="#4583FF"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            TABLE
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start"
                      />
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    />
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <div
                            class="name-container"
                          >
                            <svg
                              height="16"
                              viewBox="0 0 1024 1024"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M828.952 121.905a73.143 73.143 0 0 1 73.143 73.143v633.904a73.143 73.143 0 0 1-73.143 73.143H195.048a73.143 73.143 0 0 1-73.143-73.143V195.048a73.143 73.143 0 0 1 73.143-73.143zm-512 597.333H195.048v109.714h121.904zm512 0H390.095v109.714h438.857zm-512-182.857H195.048v109.714h121.904zm512 0H390.095v109.714h438.857zm-512-182.857H195.048v109.714h121.904zm512 0H390.095v109.714h438.857z"
                                fill="#4583FF"
                              />
                            </svg>
                            <span
                              class="content"
                            >
                              task
                            </span>
                          </div>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher_open"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        color="currentColor"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            color="#4583ff"
                            height="16"
                            viewBox="0 0 18 18"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8.25 5.25V3A.75.75 0 0 1 9 2.25h6.75a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V6a.75.75 0 0 1 .75-.75zM3.75 12v1.5H7.5V12zm6.75 0v1.5h3.75V12zm0-2.25v1.5h3.75v-1.5zm0-2.25V9h3.75V7.5zM3.75 9.75v1.5H7.5v-1.5z"
                              fill="currentColor"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            test2
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                      <span
                        class="ant-tree-indent-unit"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher_close"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        height="16"
                        viewBox="0 0 14 14"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3zM815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3m0 0"
                              fill="#4583FF"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            TABLE
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher_open"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        color="currentColor"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            color="#4583ff"
                            height="16"
                            viewBox="0 0 18 18"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8.25 5.25V3A.75.75 0 0 1 9 2.25h6.75a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V6a.75.75 0 0 1 .75-.75zM3.75 12v1.5H7.5V12zm6.75 0v1.5h3.75V12zm0-2.25v1.5h3.75v-1.5zm0-2.25V9h3.75V7.5zM3.75 9.75v1.5H7.5v-1.5z"
                              fill="currentColor"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            test3
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher_close"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        height="16"
                        viewBox="0 0 14 14"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3zM815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3m0 0"
                              fill="#4583FF"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            TABLE
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-card ant-card-bordered css-ri1dts css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-card-body"
      >
        <div
          class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-dev-only-do-not-override-txh9fw"
          role="tree"
        >
          <div>
            <input
              aria-label="for screen reader"
              style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
              tabindex="0"
              value=""
            />
          </div>
          <div
            aria-hidden="true"
            class="ant-tree-treenode"
            style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
          >
            <div
              class="ant-tree-indent"
            >
              <div
                class="ant-tree-indent-unit"
              />
            </div>
          </div>
          <div
            class="ant-tree-list"
            style="position: relative;"
          >
            <div
              class="ant-tree-list-holder"
            >
              <div>
                <div
                  class="ant-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher_open"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        color="currentColor"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-checkbox"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            color="#4583ff"
                            height="16"
                            viewBox="0 0 18 18"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                              fill="currentColor"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            comparison-name
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher_open"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        color="currentColor"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-checkbox"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            color="#4583ff"
                            height="16"
                            viewBox="0 0 18 18"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8.25 5.25V3A.75.75 0 0 1 9 2.25h6.75a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V6a.75.75 0 0 1 .75-.75zM3.75 12v1.5H7.5V12zm6.75 0v1.5h3.75V12zm0-2.25v1.5h3.75v-1.5zm0-2.25V9h3.75V7.5zM3.75 9.75v1.5H7.5v-1.5z"
                              fill="currentColor"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            test
                            (
                            0
                            )
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher_open"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        color="currentColor"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-checkbox"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3zM815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3m0 0"
                              fill="#4583FF"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            TABLE
                             (
                            0
                            )
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start"
                      />
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher-noop"
                    />
                    <span
                      class="ant-tree-checkbox"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="object-comparison-result-pass css-1wc7lqr"
                        >
                          <div
                            class="name-container"
                          >
                            <svg
                              height="16"
                              viewBox="0 0 1024 1024"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M828.952 121.905a73.143 73.143 0 0 1 73.143 73.143v633.904a73.143 73.143 0 0 1-73.143 73.143H195.048a73.143 73.143 0 0 1-73.143-73.143V195.048a73.143 73.143 0 0 1 73.143-73.143zm-512 597.333H195.048v109.714h121.904zm512 0H390.095v109.714h438.857zm-512-182.857H195.048v109.714h121.904zm512 0H390.095v109.714h438.857zm-512-182.857H195.048v109.714h121.904zm512 0H390.095v109.714h438.857z"
                                fill="#4583FF"
                              />
                            </svg>
                            <span
                              class="content"
                              title="task"
                            >
                              task
                            </span>
                          </div>
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                          >
                            <div
                              class="ant-space-item"
                            >
                              <svg
                                class="view-detail-icon"
                                color="#4583ff"
                                height="16"
                                viewBox="0 0 1024 1024"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M910.423 893.2 790.027 772.662c31.305-42.579 49.833-95.127 49.833-151.932 0-141.624-115.086-256.85-256.54-256.85S326.785 479.106 326.785 620.73 441.866 877.58 583.32 877.58c56.737 0 109.222-18.55 151.75-49.893l120.397 120.538c7.59 7.593 17.532 11.393 27.479 11.393s19.888-3.8 27.478-11.394c15.174-15.198 15.174-39.832-.001-55.024M583.32 814.359c-106.638 0-193.39-86.863-193.39-193.629s86.752-193.628 193.39-193.628 193.395 86.861 193.395 193.628-86.758 193.629-193.395 193.629"
                                  fill="currentColor"
                                />
                                <path
                                  d="M251.215 631.364c0-181.288 146.78-328.252 327.844-328.252 110.88 0 208.904 55.113 268.236 139.473V124.164c0-32.988-26.736-59.78-59.715-59.78H161.91c-32.977 0-59.714 26.763-59.714 59.779v775.672c0 32.99 26.735 59.782 59.715 59.782h417.148c-181.063 0-327.844-146.964-327.844-328.253m-29.803-447.616c0-16.481 13.344-29.841 29.804-29.841h447.06c16.46 0 29.804 13.36 29.804 29.84s-13.343 29.842-29.804 29.842h-447.06c-16.46 0-29.804-13.361-29.804-29.841"
                                  fill="currentColor"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher_open"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        color="currentColor"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-checkbox"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            color="#4583ff"
                            height="16"
                            viewBox="0 0 18 18"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8.25 5.25V3A.75.75 0 0 1 9 2.25h6.75a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V6a.75.75 0 0 1 .75-.75zM3.75 12v1.5H7.5V12zm6.75 0v1.5h3.75V12zm0-2.25v1.5h3.75v-1.5zm0-2.25V9h3.75V7.5zM3.75 9.75v1.5H7.5v-1.5z"
                              fill="currentColor"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            test2
                            (
                            0
                            )
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                      <span
                        class="ant-tree-indent-unit"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher_close"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        height="16"
                        viewBox="0 0 14 14"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-checkbox"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3zM815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3m0 0"
                              fill="#4583FF"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            TABLE
                             (
                            0
                            )
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher_open"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        color="currentColor"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-checkbox"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            color="#4583ff"
                            height="16"
                            viewBox="0 0 18 18"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8.25 5.25V3A.75.75 0 0 1 9 2.25h6.75a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V6a.75.75 0 0 1 .75-.75zM3.75 12v1.5H7.5V12zm6.75 0v1.5h3.75V12zm0-2.25v1.5h3.75v-1.5zm0-2.25V9h3.75V7.5zM3.75 9.75v1.5H7.5v-1.5z"
                              fill="currentColor"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            test3
                            (
                            2
                            )
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    >
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                      />
                      <span
                        class="ant-tree-indent-unit ant-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="ant-tree-switcher ant-tree-switcher_close"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        height="16"
                        viewBox="0 0 14 14"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-checkbox"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1wc7lqr"
                        >
                          <svg
                            height="18"
                            viewBox="0 0 1024 1024"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M165.3 417.3V739c0 22.2 19 40.3 42.4 40.3H815c23.4 0 42.4-18 42.4-40.3V412h-692v5.3zM815 278.6H519.5v-8.8c0-28.5-23.7-51.6-52.7-51.6H218c-29 0-52.7 23.1-52.7 51.6V368h692.1v-49.1c0-22.3-19-40.3-42.4-40.3m0 0"
                              fill="#4583FF"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            TABLE
                             (
                            2
                            )
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
